--- a/SintaxisCSS.html
+++ b/SintaxisCSS.html
@@ -9,10 +9,17 @@ body {
   background-color:red;
 }
 
+#caja {
+  width:200px;
+  height:200px;
+  background-color:yellow;
+}
+
 </style>
 </head>
 
 <body>
+  <div id="caja"></div>
 </body>
 
 </html>
