--- a/SintaxisCSS.html
+++ b/SintaxisCSS.html
@@ -15,11 +15,22 @@ body {
   background-color:yellow;
 }
 
+.grupo {
+  width: 200px;
+  height: 200px;
+  background-color:Blue;
+  margin: 10px;
+}
+
 </style>
 </head>
 
 <body>
   <div id="caja"></div>
+
+  <div class="grupo"></div>
+  <div class="grupo"></div>
+  <div class="grupo"></div>
 </body>
 
 </html>
