--- a/propiedades_forma.html
+++ b/propiedades_forma.html
@@ -9,11 +9,24 @@ header {
 width:1000px;
 height:200px;
 background:blue;
+margin: 20px;
+border: 15px solid black;
+padding: 20px;
+}
+
+#logo {
+  width: 200px;
+  height: 60px;
+  background: green;
+  border: 5px solid white;
+  border-radius: 10px;
 }
 
 </style>
 </head>
 <body>
-<header></header>
+<header>
+  <div id="logo">LOGO TIPO</div>
+</header>
 </body>
 </html>
