--- a/propiedades_color.html
+++ b/propiedades_color.html
@@ -15,6 +15,14 @@ margin: 20px;
 background: magenta;
 }
 
+#c2 {
+  background: #aa66ff;
+}
+
+#c3 {
+  background: rgba(180, 0, 70, 0.5);
+}
+
 </style>
 </head>
 <body>
