--- a/propiedades_ubicacion.html
+++ b/propiedades_ubicacion.html
@@ -3,6 +3,23 @@
 <head>
 <meta charset="utf-8">
 <title>Propiedades de ubicación</title>
+<!--Inician los estilos-->
+<style>
+*{
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+  header {
+    position: relative;
+    margin: auto;
+    width: 1000px;
+    height: 120px;
+    background: #444;
+  }
+
+</style>
 </head>
 
 <body>
