--- a/propiedades_ubicacion.html
+++ b/propiedades_ubicacion.html
@@ -11,14 +11,84 @@
   list-style: none;
 }
 
-  header {
-    position: relative;
-    margin: auto;
-    width: 1000px;
-    height: 120px;
-    background: #444;
-  }
+header {
+  position: relative;
+  margin: 20px auto;
+  width: 1000px;
+  height: 120px;
+  background: #444;
+}
 
+#logo {
+  position: absolute;
+  top: 30px;
+  left: 30px;
+  width: 200px;
+  height: 60px;
+  background: #ccc;
+}
+
+.redes {
+  position: absolute;
+  width: 42px;
+  height: 42px;
+  background: #ccc;
+  border-radius: 100%;
+}
+
+#icono1 {
+  top: 42px;
+  right: 120px;
+}
+
+#icono2 {
+  top: 42px;
+  right: 71px;
+}
+
+#icono3 {
+  top: 42px;
+  right: 19px;
+}
+
+nav {
+  position: relative;
+  margin: auto;
+  width: 1000px;
+  height: 45px;
+}
+
+.botones {
+  float: left;
+  width: 196px;
+  height: 45px;
+  margin: 0px 2px;
+  background: #333;
+}
+
+#top {
+  position: relative;
+  margin: 20px auto;
+  width: 1000px;
+  height: 192px;
+  background: #888;
+}
+
+section {
+  position: relative;
+  margin: 20px auto;
+  width: 1000px;
+  height: 453px;
+  background: #aaa;
+}
+
+footer {
+  position: relative;
+  margin: 20px auto;
+  width: 1000px;
+  height: 70px;
+  background: #888;
+}
 </style>
 </head>
 
@@ -27,9 +97,9 @@
 <header>
   <div id="logo"></div>
 
-  <div id="icono1"></div>
-  <div id="icono2"></div>
-  <div id="icono3"></div>
+  <div id="icono1" class="redes"></div>
+  <div id="icono2" class="redes"></div>
+  <div id="icono3" class="redes"></div>
 </header>
 <!--Finaliza cabezote-->
 
