--- a/propiedades_ubicacion.html
+++ b/propiedades_ubicacion.html
@@ -71,7 +71,19 @@ nav {
   margin: 20px auto;
   width: 1000px;
   height: 192px;
-  background: #888;
+}
+
+#top ul {
+  width: 1010px;
+  height: 192px;
+}
+
+#top ul li  {
+  float: left;
+  width: 326px;
+  height: 192px;
+  margin-right: 10px;
+  background: #000;
 }
 
 section {
@@ -80,6 +92,33 @@ section {
   width: 1000px;
   height: 453px;
   background: #aaa;
+}
+
+aside#izq {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 200px;
+  height: 453px;
+  background: #333;
+}
+
+article {
+  position: absolute;
+  left: 200px;
+  top: 0px;
+  width: 600px;
+  height: 453px;
+  background: lightpink;
+}
+
+aside#der {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 200px;
+  height: 453px;
+  background: #333;
 }
 
 footer {
@@ -129,7 +168,7 @@ footer {
 <section>
   <aside id="izq"></aside>
   <article></article>
-  <aside id"der"></aside>
+  <aside id="der"></aside>
 </section>
 <!--Finaliza sección-->
 
