--- a/propiedades_texto.html
+++ b/propiedades_texto.html
@@ -78,7 +78,6 @@ nav {
   text-align: center;
   line-height: 45px;
   color: lightyellow;
-
 }
 
 #top {
@@ -86,6 +85,7 @@ nav {
   margin: 20px auto;
   width: 1000px;
   height: 192px;
+  background: white;
 }
 
 #top ul {
@@ -98,7 +98,16 @@ nav {
   width: 326px;
   height: 192px;
   margin-right: 10px;
-  background: #000;
+  text-align: center;
+  background: white;
+}
+
+#top ul li img {
+  border-radius: 90%;
+}
+
+#top ul li h1 {
+  font-family: "Kaushan Script", cursive;
 }
 
 section {
