full changes wireframe

--- a/propiedades_texto.html
+++ b/propiedades_texto.html
@@ -52,13 +52,13 @@ header {
 #icono2 {
   top: 42px;
   right: 71px;
-  background: lightpink;
+  background: lightblue;
 }
 
 #icono3 {
   top: 42px;
   right: 19px;
-  background: lightblue;
+  background: lightpink;
 }
 
 nav {
@@ -110,12 +110,16 @@ nav {
   font-family: "Kaushan Script", cursive;
 }
 
+#top ul li p {
+  font-size: 14px;
+  margin: 10px;
+}
+
 section {
   position: relative;
   margin: 20px auto;
   width: 1000px;
   height: 453px;
-  background: #aaa;
 }
 
 aside#izq {
@@ -136,6 +140,23 @@ article {
   background: lightpink;
 }
 
+ article h1 {
+  font-family: "Kaushan Script", cursive;
+  font-size: 40px;
+  margin: 20px;
+ }
+
+ article p img {
+   float: left;
+   margin-right: 20px;
+ }
+
+ article p {
+   font-size: 14px;
+   margin: 5px 20px;
+   text-align: justify;
+ }
+
 aside#der {
   position: absolute;
   right: 0;
@@ -151,6 +172,10 @@ footer {
   width: 1000px;
   height: 70px;
   background: #888;
+  text-align: center;
+  line-height: 70px;
+  color: lightyellow;
+  background: lightpink;
 }
 </style>
 <!--Finalizan los estilos-->
