--- a/propiedades_texto.html
+++ b/propiedades_texto.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Propiedades de ubicación</title>
+<title>Propiedades de texto</title>
 <link href="https://fonts.googleapis.com/css?family=Kaushan+Script&display=swap" rel="stylesheet">
 <!--Inician los estilos-->
 <style>
