--- a/propiedades_enlace.html
+++ b/propiedades_enlace.html
@@ -1,267 +1,11 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 <meta charset="utf-8">
 <title>Propiedades de enlace</title>
 <link href="https://fonts.googleapis.com/css?family=Kaushan+Script&display=swap" rel="stylesheet">
-<!--Inician los estilos-->
-<style>
-*{
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  font-family: sans-serif;
-}
-
-#chat {
-  width: 250px;
-  height: 40px;
-  position: fixed;
-  bottom: 0;
-  right: 20px;
-  background: lightgreen;
-  border: 1px solid black;
-  z-index: 1;
-  text-align: center;
-  line-height: 40px;
-  font-family: "Kaushan Script", cursive;
-  font-size: 22px;
-  color: black;
-  border-radius: 20px 20px 0 0;
-  cursor:pointer;
-}
-
-header {
-  position: relative;
-  margin: 20px auto;
-  width: 1000px;
-  height: 120px;
-}
-
-#logo {
-  position: absolute;
-  top: 30px;
-  left: 30px;
-  width: 200px;
-  height: 60px;
-  font-family: "Kaushan Script", cursive;
-  font-size: 50px;
-  text-align: center;
-  line-height: 60px;
-}
-
-.redes {
-  position: absolute;
-  width: 42px;
-  height: 42px;
-  background: #ccc;
-  border-radius: 100%;
-  text-align: center;
-  line-height: 42px;
-  color: white;
-}
-
-#icono1 {
-  top: 42px;
-  right: 120px;
-  background: lightgreen;
-}
-
-#icono2 {
-  top: 42px;
-  right: 71px;
-  background: lightblue;
-}
-
-#icono3 {
-  top: 42px;
-  right: 19px;
-  background: lightpink;
-}
-
-nav {
-  position: relative;
-  margin: auto;
-  width: 1000px;
-  height: 45px;
-}
-
-.botones {
-  float: left;
-  width: 196px;
-  height: 45px;
-  margin: 0px 2px;
-  background: lightpink;
-  font-family: "Kaushan Script", cursive;
-  text-align: center;
-  line-height: 45px;
-  color: lightyellow;
-}
-
-a .botones:hover {
-  background: rgba(255,0,0,.1);
-}
-
-a .botones:active {
-  background: rgba(255,0,0,.4);
-}
-
-#top {
-  position: relative;
-  margin: 20px auto;
-  width: 1000px;
-  height: 192px;
-  background: white;
-}
-
-#top ul {
-  width: 1010px;
-  height: 192px;
-}
-
-#top ul li  {
-  float: left;
-  width: 326px;
-  height: 192px;
-  margin-right: 10px;
-  text-align: center;
-  background: white;
-}
-
-#top ul li img {
-  border-radius: 90%;
-}
-
-#top ul li h1 {
-  font-family: "Kaushan Script", cursive;
-}
-
-#top ul li p {
-  font-size: 14px;
-  margin: 10px;
-}
-
-section {
-  position: relative;
-  margin: 20px auto;
-  width: 1000px;
-  height: 453px;
-}
-
-aside#izq {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 200px;
-  height: 453px;
-}
-aside#izq ul li {
-  background: lightgray;
-  margin: 2px 10px;
-  padding: 10px;
-  list-style: square;
-  list-style-position: inside;
-  list-style-image:url(./img/lista.png);
-}
-
-aside#izq ul li a {
-  text-decoration: none;
-}
-
-article {
-  position: absolute;
-  left: 200px;
-  top: 0px;
-  width: 600px;
-  height: 453px;
-  background: lightpink;
-}
-
- article h1 {
-  font-family: "Kaushan Script", cursive;
-  font-size: 40px;
-  margin: 20px;
- }
-
- article p img {
-   float: left;
-   margin-right: 20px;
- }
-
- article p {
-   font-size: 14px;
-   margin: 5px 20px;
-   text-align: justify;
- }
-
-aside#der {
-  position: absolute;
-  right: 0;
-  top: 0;
-  width: 200px;
-  height: 453px;
-}
-
-aside#der h1 {
-  font-family: "Kaushan Script", cursive;
-  width: 200px;
-  height: 50px;
-  margin-bottom: 10px;
-  text-align: center;
-  line-height: 50px;
-  background: lightpink;
-  color: lightyellow;
-  border: 1px solid black;
-  margin-left: 5px;
-}
-
-aside#der input {
-  margin: 5px 5px;
-  padding: 10px;
-  border: 1px solid black;
-  width: 179px;
-}
-
-aside#der input[type="text"] {
-  background-image: url(./img/usuario.png);
-  background-repeat: no-repeat;
-  background-position: right;
-  background-size: contain;
-}
-
-aside#der input[type="password"] {
-  background-image: url(./img/password.png);
-  background-repeat: no-repeat;
-  background-position: right;
-  background-size: contain;
-}
-
-aside#der input[type="email"] {
-  background-image: url(https://thumbs.dreamstime.com/b/icono-del-vector-correo-email-ejemplo-sobre-s%C3%ADmbolo-de-direcci%C3%B3n-para-la-web-los-contactos-o-carta-comercial-comunicaci%C3%B3n-135062044.jpg);
-  background-repeat: no-repeat;
-  background-position: right;
-  background-size: contain;
-}
-
-aside#der input[type="submit"] {
-  width: 115px;
-  margin: 5px 5px;
-  padding: 10px;
-}
-
-footer {
-  position: relative;
-  margin: 20px auto;
-  width: 1000px;
-  height: 70px;
-  background: #888;
-  text-align: center;
-  line-height: 70px;
-  color: lightyellow;
-  background: lightpink;
-}
-</style>
-<!--Finalizan los estilos-->
+<link type="text/css" href="estilos.css" rel="stylesheet" media="" >
 </head>
 
 <body>
@@ -350,6 +94,6 @@ footer {
   &copy;Todos los derechos reservados.
 </footer>
 <!--Finaliza pie de página-->
-
 </body>
+
 </html>
