--- a/Descubriendo_medellin.html
+++ b/Descubriendo_medellin.html
@@ -3,6 +3,8 @@
 
 <head>
 <meta charset="utf-8">
+<meta name="author" content="Angie Sanguino">
+<meta name="description" content="Página web destinada a dar a conocer la hermosa ciudad de Medellin por medio de planes turisticos.">
 <title>Descubriendo Medellin</title>
 <link href="https://fonts.googleapis.com/css?family=Kaushan+Script&display=swap" rel="stylesheet">
 <link type="text/css" href="estilos.css" rel="stylesheet" media="" >
@@ -15,22 +17,22 @@
 
 <!--Inicia cabezote-->
 <header>
-  <div id="logo">Logotipo</div>
+  <div id="logo"><img src="./Img/soyturismo.png" width="250"></div>
 
-  <div id="icono1" class="redes">x</div>
-  <div id="icono2" class="redes">x</div>
-  <div id="icono3" class="redes">x</div>
+  <div id="icono1" class="redes"><img src="./Img/fb.png"></div>
+  <div id="icono2" class="redes"><img src="./Img/instagram.png"></div>
+  <div id="icono3" class="redes"><img src="./Img/wsp.png"></div>
 </header>
 <!--Finaliza cabezote-->
 
 <!--Inicia barra de navegación-->
 <nav>
   <ul>
-    <a href="g"><li class="botones">Boton 1</li></a>
-    <a href="g"><li class="botones">Boton 2</li></a>
-    <a href="g"><li class="botones">Boton 3</li></a>
-    <a href="g"><li class="botones">Boton 4</li></a>
-    <a href="g"><li class="botones">Boton 5</li></a>
+    <a href="g"><li class="botones">Plaza de Botero</li></a>
+    <a href="g"><li class="botones">Parque Arví</li></a>
+    <a href="g"><li class="botones">Parque Explora</li></a>
+    <a href="g"><li class="botones">Jardín Botánico</li></a>
+    <a href="g"><li class="botones">Parque Norte</li></a>
   </ul>
 </nav>
 <!--Finaliza barra de navegación-->
@@ -40,20 +42,20 @@
   <ul>
     <li>
       <img src="./img/img01.jpg" width="100">
-      <h1>Lorem ipsum</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      <h1 class="titulo">Parque de los Pies Descalzos</h1>
+      <p class="descripcion">Un lugar especial para relajarse, un oasis en medio de la ciudad. Allí podrás recorrer un sendero de guaduas, relajar tus pies en los pozos de agua y camina sobre la arena logrando conectar todos tus sentidos.</p>
     </li>
 
     <li>
       <img src="./img/img02.jpg" width="100">
-      <h1>Lorem ipsum</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      <h1 class="titulo">Parque de la Luz</h1>
+      <p class="descripcion">Lindo lugar para disfrutar durante el día o la noche, aunque en horas nocturnas sus luces transforman el espacio. Una gran plaza llena de focos de luz y arboles de bambú que tornan ese lugar en algo especial.</p>
     </li>
 
     <li>
       <img src="./img/img03.jpg" width="100">
-      <h1>Lorem ipsum</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      <h1 class="titulo">Pueblito Paisa</h1>
+      <p class="descripcion">Esta recreación de la cultura paisa en el Cerro Nutibara te permitirá una vista hermosa de la ciudad sin tener que salir de ella. Obtendrás fotografías espectaculares y podrás llevar souvenires de sus tiendas.</p>
     </li>
   </ul>
 </div>
@@ -63,22 +65,22 @@
 <section>
   <aside id="izq">
     <ul>
-      <li><a href="#">Link 1</a></li>
-      <li><a href="#">Link 2</a></li>
-      <li><a href="#">Link 3</a></li>
-      <li><a href="#">Link 4</a></li>
+      <li><a href="#">Paquete Guatapé</a></li>
+      <li><a href="#">Museo El Castillo</a></li>
+      <li><a href="#">Prueba la gastronomía Paisa</a></li>
+      <li><a href="#">Famosa comuna 13</a></li>
     </ul>
   </aside>
 
   <article>
-    <h1>Lorem Ipsum</h1>
-    <p><img src="./img/foto.jpg" width="250">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+    <h1>Nuestro Tour #1</h1>
+    <p><img src="./img/guatape.png" width="250"><b>"GUATAPÉ UN PARAÍSO DE COLORES" </b>Podrás disfrutar de una experiencia totalmente diferente. Te contaremos la historia real de la región, te mostraremos sus paisajes, sus calles coloridas adornadas con zócalos (únicos en el mundo), conocerás la piedra y el embalse más grande de Colombia.</p>
     <br>
-    <p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+    <p><i>Las actividades en Medellín que buscas para tus vacaciones en Descubriendo Medellin. Descubre las excursiones y tours que no puedes dejar de hacer en tu viaje y prepárate para vivir una experiencia extraordinaria. ¡Reserva ya mismo los paquetes para las mejores actividades!</i></p>
   </article>
 
   <aside id="der">
-    <h1>Ingreso</h1>
+    <h1>registrate para reservar</h1>
     <form>
       <input type="text" placeholder="Usuario">
       <input type="password" placeholder="Contraseña">
